# fastapi-template

./: .gitignore  Makefile  README.md  compose.yaml  mypy.ini  pyproject.toml  pyright.json  ruff.toml
migrations/: env.py  script.py.mako
migrations/templates/: README.md  roles_permissions_template.py
migrations/versions/: 20251230_0001_bootstrap_rbac.py  20260203_0001_bootstrap_rbac.py  20260209_0002_roles_code_to_string.py  20260209_0003_roles_permissions_template.py  20260210_0004_user_invariant_checks.py
nginx/: app-up.sh  down.sh  nginx.conf  up.sh
nginx/conf.d/: app.conf
src/application/common/dtos/: users_dto.py
src/application/dtos/: users_dto.py
src/backend/: __init__.py  main.py
src/backend/application/: __init__.py
src/backend/application/commands/: __init__.py
src/backend/application/commands/rbac/: __init__.py  assign_role_to_user.py  create_role.py  delete_role.py  grant_permission.py  revoke_permission.py  revoke_role_from_user.py  update_role.py
src/backend/application/commands/users/: __init__.py  create.py  delete.py  update.py
src/backend/application/common/: __init__.py
src/backend/application/common/dtos/: __init__.py  auth.py  base.py  base_dto.py  rbac.py  (+2 more)
src/backend/application/handlers/: __init__.py  base.py  result.py  transform.py
src/backend/application/queries/: __init__.py
src/backend/domain/: __init__.py
src/backend/domain/core/: __init__.py
src/backend/domain/ports/: __init__.py
src/backend/infrastructure/: __init__.py
src/backend/infrastructure/di/: handlers.py  persistence.py
src/backend/infrastructure/errors/: __init__.py  sqlalchemy_errors.py
src/backend/infrastructure/lock/: __init__.py  redis_lock.py
src/backend/infrastructure/persistence/: __init__.py  manager.py  persistence_gateway.py  records.py
src/backend/infrastructure/security/: __init__.py  password_hasher.py
src/backend/infrastructure/tools/: __init__.py  as_result.py  constraint_messages.py  converters.py  msgspec_codec.py  msgspec_convert.py  msgspec_tools.py  serialization.py  storage_result.py
src/backend/presentation/: __init__.py  app.py  settings.py
src/backend/presentation/di/: __init__.py  app_provider.py  container.py  request_provider.py  require_auth.py  startup_checks.py
src/backend/shared/tools/: __init__.py
src/backend/startup/: __init__.py  app.py  di.py
src/domain/core/entities/: base.py
src/domain/core/exceptions/: __init__.py  base.py  user_exceptions.py
src/domain/core/value_objects/: __init__.py  base.py  email.py  user_id.py
src/fastapi_backend/application/commands/: __init__.py
src/fastapi_backend/application/queries/: __init__.py
src/fastapi_backend/domain/events/: base.py
src/fastapi_backend/domain/ports/: event_dispatcher.py  unit_of_work.py
src/fastapi_backend/domain/services/: rbac_domain_service.py  user_domain_service.py
src/fastapi_backend/infrastructure/security/: password_hasher.py
src/infrastructure/api/schemas/: users.py
src/shared/tools/: __init__.py  dto.py
tests/: conftest.py  test_auth_logout.py  test_auth_register.py  test_auth_schemas.py  test_domain_policies.py  test_error_payload_sanitization.py  test_http_error_status.py  test_jwt.py  test_post_commit.py  test_rbac_error_mapper.py  test_refresh_tokens.py  test_request_schemas.py  test_storage_error_mapper.py  test_value_objects.py  test_write_tx.py
(+237 files in other folders)
